--- a/css/styles.css
+++ b/css/styles.css
@@ -12,10 +12,6 @@
 
 */
 
-
-/* test */
-
-
 /* 
     ===== reset =====
 */
@@ -74,7 +70,7 @@ body {
     color: #9da3a8;
     padding: 0 1rem; /* 16px */
     font-size: 0.875rem; /* 14px */
-    font-family: 'Merriweather', Garamond, ‘Hoefler Text’, ‘Times New Roman’, serif;
+    font-family: "Merriweather", Garamond, "Hoefler Text", "Times New Roman", serif;
 }
 
 main {
@@ -144,7 +140,7 @@ header {
 
 #contact > div { /* flex form group */
     display: flex;
-    flex-wrap: no-wrap;  
+    flex-wrap: nowrap;
     flex-direction: column;
 }
 
